<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>obstacle_detection package</description>
  <maintainer email="suport@didrivers.com">mahi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>wizo_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>wizo_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>wizo_msgs</exec_depend>

</package>
